...
import {
  StyleSheet,
  Text,
  SafeAreaView,
  TextInput,
  ScrollView,
  Alert,
  Dimensions,
  View,
  ImageBackground,
} from 'react-native';
import { TouchableOpacity } from 'react-native-gesture-handler';
import {
...
        return false;
    }
}
    const createAlert = () =>
    Alert.alert(
      'Alert',
      'Incorrect Login',
      [
        { 
          text: 'OK',
          onPress: () => navigation.navigate('Login'),
        },
      ],
    );
    return(
      <SafeAreaView style={uiStyle.container}>
      <View style={styles.imagecontainer}>
        <ImageBackground source = {require('../../assets/logo.png')} style={styles.image}></ImageBackground>
      </View>
      <View style={styles.titlecontainer}>
      <Text style={styles.text}>
        Enter your first name and last name to login
      </Text>
      <SafeAreaView style={styles.inputAreaContainer}>
        <TextInput
          style={styles.input}
          onChangeText={onChangeFirstName}
          value={firstNameOfUser}
          placeholder="First Name"
          returnKeyType="done"
        />
        <TextInput
          style={styles.input}
          onChangeText={onChangeLastName}
          value={lastNameOfUser}
          placeholder="Last Name"
          returnKeyType="done"
        />
        <TextInput
          style={styles.input}
          onChangeText={onChangePassword}
          value={passwordValue}
          secureTextEntry={true}
          placeholder="Password"
          returnKeyType="done"
        />
        <TouchableOpacity
          style={[styles.bottomButton, styles.shadowProp]}
          onPress={() => {

...
              }else{
                  createAlert();
              };
            }
          }}
        >
          <Text style={uiStyle.buttonLabel}>Submit</Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={[styles.bottomButton, styles.shadowProp]}
          onPress={() => navigation.navigate('Continue Tests', {screen: 'Create Profile'})}
        >
          <Text style={uiStyle.buttonLabel}>Sign Up</Text>
        </TouchableOpacity>    
      </SafeAreaView>
      </View>
    </SafeAreaView>
   
    );
...
