...
      ],
    );

  return (
    
    <SafeAreaView style={styles.screen}>
      <Text style={styles.titleText}>Concussion Check</Text>
      <View style={styles.container}>
        <TouchableOpacity onPress={createAlert} style={styles.startCheckButton}>
          <Text style={styles.startCheckText}>Begin Check</Text>
        </TouchableOpacity>
        {/*<Button style={styles.startCheckText} {'Start Check'} onPress={createAlert} />*/}
      </View>
...
