...
          </Text>
            <TouchableOpacity
              // onPress={() => navigation.navigate('Voms Start')}
              onPress={() => navigation.navigate('Home')}
              style={[styles.bottomButton, styles.shadowProp]}
            >
              <Text style={styles.buttonLabel}>I understand</Text>
            </TouchableOpacity>
          </View>
      </View>
    </View>
    
  );
...
