...
//   }, [accountRepoContext]);


    const createAlert = () =>
    Alert.alert(
      'Alert',
      'Need to Login to see reports',
      [
        {
          text: 'OK',
          onPress: () => navigation.navigate('Login'),
        },
      ],
...
      <SafeAreaView style={uiStyle.container}>
       <View style={styles.imagecontainer}>
        <ImageBackground source = {require('../../assets/logo.png')} style={styles.image}></ImageBackground>
      </View>
      <View style={styles.titlecontainer}>
      <Text style={styles.text}>
        Which reports would you like to access?
      </Text>
      <SafeAreaView style={styles.inputAreaContainer}>
        
        <TouchableOpacity
          style={[styles.bottomButton, styles.shadowProp]}
          onPress={() => {
...
              else{
                navigation.navigate('Continue Tests', {screen: 'Prelim Report'}); 
              }
                
          }}
        >
        <Text style={uiStyle.buttonLabel}>Preliminary Test Reports</Text>
        </TouchableOpacity>
        {<TouchableOpacity
          style={[styles.bottomButton,  styles.shadowProp]}

          onPress={() => {
            if(account.account_id == null && account.first_name== 'John'){
...
            }
            else{
              navigation.navigate('Continue Tests', {screen: 'DS Report'}); 
            }
            }}
            >
          <Text style={uiStyle.buttonLabel}>Daily Symptom Reports</Text>
        </TouchableOpacity> }
      </SafeAreaView>
      </View>
    </SafeAreaView>
    );
}
...
